# TutorHub

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Plan działania.txt  README.md  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
apps/accounts/: admin.py  filters.py  forms.py  managers.py  models.py  services.py  tasks.py  urls.py  views.py
apps/admin_panel/: apps.py  urls.py  views.py
apps/attendance/: admin.py  apps.py  models.py  services.py  tasks.py  urls.py  views.py
apps/cancellations/: admin.py  apps.py  invoice_corrections.py  models.py  services.py  tasks.py  urls.py  views.py
apps/core/: choices.py  filters.py  mixins.py  models.py  permissions.py  urls.py  utils.py  views.py
apps/invoices/: admin_urls.py  apps.py  company_config.py  models.py  pdf_service.py  services.py  tasks.py  urls.py  utils.py  views.py
apps/landing/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
apps/lessons/: admin.py  api_views.py  apps.py  forms.py  ical.py  managers.py  models.py  services.py  tasks.py  urls.py  views.py
apps/messages/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/notifications/: admin.py  apps.py  context_processors.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
apps/parents/: apps.py  services.py  urls.py  (+1 more)
napiatke/: asgi.py  celery.py  urls.py  wsgi.py
py_client/: 1.html  test.py  test2.py  test_p.py  test_p2.py
requirements/: base.txt  development.txt  production.txt
templates/: base.html
(+357 files in other folders)
